--- a/deployments/bets/values-kong.yaml
+++ b/deployments/bets/values-kong.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: claudioed/bets
+  repository: rodrigordavila/bets
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "otel"
