--- a/deployments/bets/values.yaml
+++ b/deployments/bets/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: rodrigordavila/bets
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "kong"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
