--- a/deployments/bets/templates/king.yaml
+++ b/deployments/bets/templates/king.yaml
@@ -5,8 +5,4 @@ metadata:
   name: bets-do-not-preserve-host
 upstream:
   host_header: {{ include "bets.fullname" . }}.bets.svc
-proxy:
-  connect_timeout: 2000
-  read_timeout: 2000
-  write_timeout: 2000
-{{end}}
+{{- end }}
